# MotionPlatform

./: .gitignore  README.md  Requirements.txt  config.py  drive_around.py  drive_around_async.py  drive_around_combined_controls.py  example.py  joystick.bat  joystick_ros2_node.py  komatsu_main.py  main.py  motion-main-complete.py  motionplatf_client.py  motionplatf_controls.py  mp_main.py  play_with_excv.py  read_bin.py  run_example.py  tcp_udp_drive_demo.py  test.py  test_data_saving.py  test_file.py  universal_connection_manager.py  universal_socket_manager.py
configuration_files/: controller_config.json  motion_platform_config.yaml
control_modules/: NiDAQ_controller.py  joystick_module.py  socket_manager.py
log/: README.md
misc/: check_joysticks.py  joystick.py
modules/: NiDAQ_controller.py  controller_stack.py  gamepad_module.py  udp_socket.py
motion_stuff/: README.md  kinematics2.py  motion_sim_measure.py
nidaq_joystick_ros2/: README.md  package.xml  setup.cfg  setup.py
nidaq_joystick_ros2/launch/: nidaq_joystick.launch.py
nidaq_joystick_ros2/nidaq_joystick_ros2/: __init__.py  nidaq_joystick_node.py  nidaq_reader.py
stream/: gstreamer-install-guide.md  new calls.txt
tests/: test_controller_stack.py  test_gamepad_module.py  test_timing.py
web/: index.html
web/static/: app.js
